# Zi

./: index.html  manifest.webmanifest  render.yaml  service-worker.js
assets/css/: styles.css
backend/: app.py  engine.py  requirements.txt
backend/data/rules/: wenmo-1.0.yaml
data/: README.md  metadata.json  palaces.json  rules_auxiliary_stars.json  rules_five_bureau.json  rules_four_hua.json  rules_main_stars.json  rules_ming_shen.json  stems_branches.json
frontend/: index.html  main.js  style.css
js/: engine-db.js  engine.js  rules.js  ui.js
ziwei_anchor_backend_pack 3/: README.md  ziwei_anchor.schema.json  ziwei_anchor.template.json
ziwei_core_py (1)/: README.md  pyproject.toml  ziwei_core_cli.py
ziwei_core_py (1)/tests/: test_basic.py
ziwei_core_py (1)/ziwei_core/: __init__.py  compute.py  loader.py
ziwei_core_py (1)/ziwei_core/data/: rules_auxiliary_stars.json  rules_five_bureau.json  rules_four_hua.json  rules_main_stars.json
