
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ziwei_core"
version = "0.1.0"
description = "Ziwei Doushu rules engine with backend-only Ziwei anchor support"
authors = [{name="ChatGPT", email="devnull@example.com"}]
requires-python = ">=3.9"
dependencies = []
